user_profile: Fix alignment and color of edit icon.

--- a/web/styles/dark_theme.css
+++ b/web/styles/dark_theme.css
@@ -59,6 +59,16 @@
     }
 
     /************************* MODAL DARK THEME *******************/
+    .user_profile_manage_own_edit_button,
+    .user_profile_manage_others_edit_button {
+        color: hsl(200deg 100% 50%);
+        cursor: pointer;
+
+        &:hover {
+            color: hsl(200deg 79% 66%);
+        }
+    }
+
     .dialog_exit_button {
         background-color: hsl(211deg 29% 14%);
         color: hsl(0deg 0% 100%);
