--- a/web/styles/modal.css
+++ b/web/styles/modal.css
@@ -69,12 +69,13 @@
         text-overflow: ellipsis;
     }
 
+    .user_profile_manage_own_edit_button,
     .user_profile_manage_others_edit_button {
         color: hsl(200deg 100% 50%);
         cursor: pointer;
 
         &:hover {
-            color: hsl(200deg 79% 66%);
+            color: hsl(200deg 100% 25%);
         }
     }
 }
