--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -478,8 +478,13 @@ ul {
     .user_profile_manage_own_edit_button,
     .user_profile_manage_others_edit_button {
         width: 25px;
+        height: 14px;
         text-align: center;
         font-size: 18px;
+    }
+
+    #user_profile_manage_own_edit_link {
+        height: 25px;
     }
 
     .deactivated-user-icon {
